--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@hapi/hapi": "^20.3.0",
     "@hapi/jwt": "^2.2.0",
+    "auto-bind": "^5.0.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^10.0.0",
     "instances-container": "^2.0.6",
